# Ayo

./: .env_EXAMPLE  .gitignore  Bot.py  PRIVACY_POLICY.md  README.md  TERMS_OF_USE.md  config.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  rapport-de-bug.md
.github/workflows/: release.yml
data/: bestof.json  festivals.json  odyssee.json  splatoon2.json  splatoon3.json  splatted.json
data/s2/: stages.json  translation.json
data/s3/: festivals.json  liquider.json  modes.json  odyssee.json  saison.json  stages.json  translation.json
helper/: codesamis.py  data.py  icons.py  rotations.py
modules/: BestOf.py  Callout.py  Cephalochic.py  CodesAmis  CodesAmis.py  Feedback.py  Festivals.py  HelpCommand.py  InformationCommands.py  InformationsCommands.py  JoinToCreate.py  Liquider.py  Loterie.py  Odyssee.py  Ping.py  Rotations.py  Splatted.py  box.py  cephalochic.py  festival.py  friendcode.py  helpful.py  lottery.py  odyssee.py  ping.py  rotations.py  splat.py
utils/: config.py  database.py  embed.py  error.py  friendcode.py  icons.py  logger.py  requests.py
